# cryptobazaar-impl

./: Cargo.toml  README.md
benches/: auctioneer.rs  auctioneer_r1.rs  auctioneer_r2.rs  double_ipa.rs  encode.rs  ipa.rs  lderivative.rs  nonzero.rs  veceq.rs
src/: lib.rs
src/acc/: mod.rs  structs.rs  tr.rs
src/auctioneer/: av_oracle.rs  enums.rs  mod.rs
src/auditor/: auctioneer.rs  mod.rs
src/bid_encoder/: mod.rs
src/bidder/: mod.rs
src/double_ipa/: mod.rs  structs.rs
src/double_pedersen_schnorr/: mod.rs  tr.rs
src/fold_lagrange/: mod.rs  structs.rs  tr.rs
src/gates/: mod.rs  structs.rs  tr.rs
src/ipa/: mod.rs  structs.rs  tr.rs
src/kzg/: lagrange.rs  mod.rs
src/pedersen_schnorr/: mod.rs  structs.rs  tr.rs
src/transcript/: mod.rs
src/univariate_sumcheck/: mod.rs  structs.rs  tr.rs
src/utils/: folding.rs  mod.rs  srs.rs
src/verifiable_folding_sumcheck/: mod.rs  structs.rs  tr.rs
src/zk_log_derivative/: mod.rs  structs.rs  tr.rs
