[package]
name = "cipher-bazaar"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-ec = "0.4.2"
merlin = "3.0.0"
ark-serialize = { version = "0.4", features = ["derive"] }
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
ark-bn254 = "0.4.0"

criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "auctioneer"
harness = false

[[bench]]
name = "ipa"
harness = false