[package]
name = "cipher-bazaar"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-ec = "0.4.2"
merlin = "3.0.0"
ark-serialize = { version = "0.4", features = ["derive"] }
rayon = { version = "1.8.0", optional = true }
rand = "0.8.5"

[dev-dependencies]
ark-bn254 = "0.4.0"
rand_chacha = "0.3.1"

criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = [ "parallel", "asm" ]
parallel = [ "rayon", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]
asm = [ "ark-ff/asm" ]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "auctioneer_r1"
harness = false

[[bench]]
name = "auctioneer_r2"
harness = false

[[bench]]
name = "ipa"
harness = false

[[bench]]
name = "lderivative"
harness = false

[[bench]]
name = "veceq"
harness = false

[[bench]]
name = "nonzero"
harness = false